--- a/Corp.Lib.CertificateAuthentication/Corp.Lib.CertificateAuthentication.csproj
+++ b/Corp.Lib.CertificateAuthentication/Corp.Lib.CertificateAuthentication.csproj
@@ -15,8 +15,8 @@
     <Product>Voyager Application</Product>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Corp.Lib.Logging" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.16" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.6" />
   </ItemGroup>
 </Project>
